# axum-html

./: .gitignore  :local-db.sqlite  Cargo.toml  README.md  package.json
migrations/: 001-init.sql  002-posts.sql  003-sessions.sql  20231115190204_init.sql  20231228071854_comments.sql
src/: helpers.rs  main.rs  routes.rs  utils.rs
src/db/: migrations.rs  mod.rs  posts.rs
src/handlers/: assets.rs
src/routes/: auth.rs  posts.rs  todos.rs
static/: tailwind-generated.css
templates/: comments.html  header.html  hello.html  index.html  like-button.html  login-form.html  login.html  post.html  posts.html  register-form.html  todos.html
templates/login-form/: email-input-invalid.html  email-input-valid.html  index.html
