[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.20"
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
libsql-client = "0.31.11"
serde = { version = "1.0.183", features = ["serde_derive"] }
tokio = { version = "1.30.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
